feat: add german language files

--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -4,3 +4,10 @@ languageName = "En"
 languageCode = "en-us"
 contentDir = "content/english"
 weight = 1
+
+################ German language ##################
+[de]
+languageName = "De"
+languageCode = "de-de"
+contentDir = "content/german"
+weight = 2
