--- a/config/_default/module.toml
+++ b/config/_default/module.toml
@@ -74,8 +74,8 @@ path = "github.com/gethugothemes/hugo-modules/shortcodes/button"
 [[imports]]
 path = "github.com/gethugothemes/hugo-modules/shortcodes/notice"
 
-[[imports]]
-path = "github.com/gethugothemes/hugo-modules/shortcodes/mermaid"
+# [[imports]]
+# path = "github.com/gethugothemes/hugo-modules/shortcodes/mermaid"
 
 [[imports]]
 path = "github.com/gethugothemes/hugo-modules/seo-tools/basic-seo"
