--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -11,19 +11,19 @@ name = "About"
 url = "/about"
 weight = 2
 
-[[main]]
-name = "Elements"
-url = "/elements"
-weight = 3
+# [[main]]
+# name = "Elements"
+# url = "/elements"
+# weight = 3
 
 [[main]]
 weight = 4
 name = "Pages"
 
-[[main]]
-parent = "Pages"
-name = "Blog"
-url = "/blog"
+# [[main]]
+# parent = "Pages"
+# name = "Blog"
+# url = "/blog"
 
 [[main]]
 parent = "Pages"
