--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -35,10 +35,10 @@ parent = "Pages"
 name = "Authors"
 url = "/authors"
 
-[[main]]
-parent = "Pages"
-name = "Categories"
-url = "/categories"
+# [[main]]
+# parent = "Pages"
+# name = "Categories"
+# url = "/categories"
 
 [[main]]
 parent = "Pages"
