--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -92,7 +92,10 @@ js_url = 'https://cdn.jsdelivr.net/npm/mermaid@latest/dist/mermaid.esm.min.mjs'
 
 ######################## sidebar widgets #########################
 [widgets]
-sidebar = ["categories", "tags"]
+sidebar = [
+    # "categories", 
+    "tags"
+]
 
 
 # google map
