--- a/hugo.toml
+++ b/hugo.toml
@@ -17,6 +17,10 @@ hasCJKLanguage = false #  If hasCJKLanguage true, auto-detect Chinese/Japanese/K
 defaultContentLanguage = 'de'
 # defaultContentLanguageInSubdir need to be true if you want to use the language code as a subdirectory and language specific 404 page
 defaultContentLanguageInSubdir = false
+ignoreFiles = [
+    '/content/english/blog',
+    '/content/german/blog',
+]
 
 ########################### Services #############################
 [services]
