--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -52,10 +52,10 @@ name = "About"
 url = "/about"
 weight = 1
 
-[[footer]]
-name = "Elements"
-url = "/elements"
-weight = 2
+# [[footer]]
+# name = "Elements"
+# url = "/elements"
+# weight = 2
 
 [[footer]]
 name = "Privacy Policy"
